# exercise

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/exercise/: transformation.py
src/exercise/config/: main.py
src/exercise/plugins/: models.py  udfs.py  utils.py
src/exercise/plugins/transformations/: models.py
src/exercise/plugins/transformations/csv_transformation/: handlers.py  models.py
src/exercise/specs/: spark_configs.yaml
src/exercise/specs/exercise/: exercise-transactions.yaml
tests/: test_handlers.py  test_spark_config.py  test_udfs.py  test_utils.py
